--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">votersapp</string>
+    <string name="app_name">Atiku\&apos;s Voters App</string>
 </resources>
